Removing DataHeader file from the root dictionary generation
Might be a temporary measure. The question is if maybe the primitive header
definition should be separated from the actual tools to use it.

--- a/Base/CMakeLists.txt
+++ b/Base/CMakeLists.txt
@@ -26,7 +26,10 @@ TrackReference.cxx
 DataHeader.cxx
 )
 
-Set(HEADERS)
+Set(HEADERS
+Detector.h
+TrackReference.h
+)
 Set(LINKDEF BaseLinkDef.h)
 Set(LIBRARY_NAME AliceO2Base)
 Set(DEPENDENCIES Base EG Physics Core)
