Add prototype shared memory transport support
It is fully transparent on the receiving end, all O2 devices
automatically benefit. Sender does have to actually request some shared
memory.
See the examples: Examples/ShmSource/src/ShmSink.cxx and
Examples/ShmSource/src/ShmSource.cxx.

This scheme utilizes the fact that every payload has a metadata (header)
stack.
When shared memory is chosen for a part of the message, this is
signalled in the
header stack for that part.
Shared memory transport can be chosen on per-message part level.
Supports all topologies (like push/pull, rep/req, pub/sub).

--- a/Utilities/Publishers/CMakeLists.txt
+++ b/Utilities/Publishers/CMakeLists.txt
@@ -6,7 +6,7 @@ set(MODULE_NAME "Publishers")
 #  - common_boost_bucket
 #  - Base
 #  - Headers
-#  - O2device
+#  - O2Device
 #  - dl
 # the 'dl' dependency is needed as the device boilerplate code in
 # runSimpleMQStateMachine.h uses dlopen etc. Probably this hidden
