--- a/Utilities/CMakeLists.txt
+++ b/Utilities/CMakeLists.txt
@@ -14,4 +14,4 @@ add_subdirectory (DataFlow)
 add_subdirectory (Publishers)
 add_subdirectory (DataCompression)
 add_subdirectory (MCStepLogger)
-add_subdirectory (fileSink)
+add_subdirectory (FileSink)
