Install runFileSink.sh

--- a/Utilities/FileSink/CMakeLists.txt
+++ b/Utilities/FileSink/CMakeLists.txt
@@ -37,3 +37,5 @@ O2_GENERATE_TESTS(
   BUCKET_NAME ${BUCKET_NAME}
   TEST_SRCS ${TEST_SRCS}
 )
+
+install(FILES test/runFileSink.sh DESTINATION bin PERMISSIONS OWNER_EXECUTE OWNER_READ OWNER_WRITE GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
