Improve runFileSink.sh

--- a/Utilities/FileSink/CMakeLists.txt
+++ b/Utilities/FileSink/CMakeLists.txt
@@ -39,3 +39,4 @@ O2_GENERATE_TESTS(
 )
 
 install(FILES test/runFileSink.sh DESTINATION bin PERMISSIONS OWNER_EXECUTE OWNER_READ OWNER_WRITE GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
+install(FILES test/FileSink.json DESTINATION share/config PERMISSIONS OWNER_READ OWNER_WRITE GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
