Add DPL compressor with time-based parallelism

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ ELSE (NOT ALICEO2_MODULAR_BUILD)
 ENDIF (NOT ALICEO2_MODULAR_BUILD)
 
 find_package(Arrow)
+find_package(LibLZMA REQUIRED)
 
 # Load some basic macros which are needed later on
 include(O2Utils)
