--- a/Framework/TestWorkflows/CMakeLists.txt
+++ b/Framework/TestWorkflows/CMakeLists.txt
@@ -64,6 +64,13 @@ O2_GENERATE_EXECUTABLE(
 )
 
 O2_GENERATE_EXECUTABLE(
+  EXE_NAME "o2ParallelCompressor"
+  SOURCES "src/o2ParallelCompressor.cxx"
+  MODULE_LIBRARY_NAME ${LIBRARY_NAME}
+  BUCKET_NAME ${MODULE_BUCKET_NAME}
+)
+
+O2_GENERATE_EXECUTABLE(
   EXE_NAME "test_MakeDPLObjects"
   SOURCES "test/test_MakeDPLObjects.cxx"
   MODULE_LIBRARY_NAME ${LIBRARY_NAME}
